--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-paper": "^5.12.5",
